# camera

./: .gitignore  CMakeLists.txt  README.md  RealsenseConfig.yaml  package.xml  requirement.txt
config/: AzureKinectSDKConfig.yaml  RsConfig.yaml
inc/: block_recognizer.hpp  camera_k4a.hpp  grid_state.hpp  infer.hpp  main.hpp  myinfer.hpp  realsense.hpp  ros_interface.hpp  utils.hpp  vision_draw.hpp  yolo.hpp
inc/common/: camera_params.hpp  colors.hpp
inc/k4a/: camera_k4a.hpp
inc/realsense/: realsense.hpp
inc/utils/: block_recognizer.hpp  myinfer.hpp  utils.hpp  vision_draw.hpp
launch/: k4a_and_serial.launch
src/: block_recognizer.cpp  camera_k4a.cpp  dynamic_recog.cpp  grid_state.cpp  k4a_capture.cpp  k4a_capture_images.cpp  k4a_detect.cpp  myinfer.cpp  one_eye.cpp  realsense.cpp  ros_interface.cpp  rs_detect.cpp  serial.cpp  vision_draw.cpp
src/common/: camera_params.cpp
src/k4a/: camera_k4a.cpp  k4a_capture_images.cpp  k4a_capture_videos.cpp  k4a_detect.cpp
src/realsense/: realsense.cpp  rs_detect.cpp
src/utils/: block_recognizer.cpp  myinfer.cpp  serial.cpp  vision_draw.cpp
src/yolo/: CMakeLists.txt  infer.cu  yolo.cu
workspace/scripts/: FrameExtractor.py  augment_scale_yolo.py  check_mask_values.py  convert_to_yolo_format.py  get_img_shape.py  json_to_mask.py  json_to_mask_save_png.py  onnx_cvt(jetson).py  onnx_cvt.py  onnx_to_engine.md  preprocess_and_augment.py  test.py  yolo_train_dete.py  yolo_train_seg.py
